implementando el nuevo calendario

--- a/index.html
+++ b/index.html
@@ -19,59 +19,77 @@
 
 <body class="mih-100">
     <header class="font-0 border-b1 borderc-greyc grey w-100 pos-sy tp-0 zi-10">
-    <nav class="padding-0-1 nav-grid">
-        <a href="http://bislai.co" class="textd-n black font-1 font-2--m margin-y0  bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
-        BISLAI
-        </a>
-        <div class="w-100--m maw-70p--l">
-            <div class="pos-r">
-                <form action="http://bislai.co/buscador">
-                    <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                    <button class="btn-search" type="submit">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
-                        </svg>
-                    </button>
-                </form>
+        <nav class="padding-0-1 nav-grid">
+            <a href="http://bislai.co" class="textd-n black font-1 font-2--m margin-y0  bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
+            BISLAI
+            </a>
+            <div class="w-100--m maw-70p--l">
+                <div class="pos-r">
+                    <form action="http://bislai.co/buscador">
+                        <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                        <button class="btn-search" type="submit">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
-        </div>
-        <div class="nav-grid-second display-n display-ib--m">
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline black vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-        </div>
-    </nav>
-</header>
+            <div class="nav-grid-second display-n display-ib--m">
+                <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline black vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
+            </div>
+        </nav>
+    </header>
     <div class="maw-60 padding-1 padding-1-0--l">
         <p class="font-1">Bislai es la <strong>respuesta</strong> a lo que encontre en la página de plenos del <strong>Ayuntamiento de Zaragoza</strong>. Allí la <strong>información se presentaba en bruto, sin distinción alguna</strong>. El fin de Bislai es mostrar los plenos de una manera más <strong>accesible y visual</strong>.
         </p>
         </p>
         <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
     </div>
+    <section class="border-t1 padding-1 border-b1 grey borderc-grey padding-5-0--l">
+        <h2 class="margin-b0 maw-60 font-2 margin-b2 font-s">Calendario de plenos</h2>
+        <article class="maw-60">
+            <input class="input-record" id="tab1" type="radio" name="tabs" checked>
+            <label class="label-record font-3 font-s" for="tab1">2015</label>
+            <input class="input-record" id="tab2" type="radio" name="tabs">
+            <label class="label-record font-3 font-s" for="tab2">2016</label>
+            <input class="input-record" id="tab3" type="radio" name="tabs">
+            <label class="label-record font-3 font-s" for="tab3">2017</label>
+            <!-- ENERO -->
+            <section class="tabla-calendario contenido1">
+                <p>2015</p>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
+            </section>
+            <!-- FEBRERO -->
+            <section class="tabla-calendario  contenido2">
+                <p>2016</p>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-07-2015.html">28 de enero de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/02-10-2015.html">26 de febrero de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/30-10-2015.html">23 de marzo de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-11-2015.html">29 de abril de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/23-12-2015.html">27 de mayo de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="">1 de julio de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-11-2015.html">22 de julio de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/23-12-2015.html">30 de septiembre de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="">28 de octubre de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-11-2015.html">2 de diciembre de 2016</a>
+                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2016</a>
+            </section>
+
+            <section class="tabla-calendario  contenido3">
+                <p>2017</p>
+            </section>
+        </article>
+    </section>
     <section class="mapa-container">
         <div id="map-wrap">
             <div id="map">
             </div>
         </div>
-    </section>
-    <section class="border-t1  padding-1 border-b1 grey borderc-grey padding-1-0--l">
-        <h2 class="margin-b0  maw-60 font-2 margin-b2 font-s">Calendario de plenos</h2>
-        <input class="input-record" id="tab1" type="radio" name="tabs" checked>
-        <label class="label-record" for="tab1">2015</label>
-        <input class="input-record" id="tab2" type="radio" name="tabs">
-        <label class="label-record" for="tab2">2016</label>
-        <input class="input-record" id="tab3" type="radio" name="tabs">
-        <label class="label-record" for="tab3">2017</label>
-        <!-- ENERO -->
-        <section class="tabla-calendario contenido1">
-            <p>2015</p>
-        </section>
-        <!-- FEBRERO -->
-        <section class="tabla-calendario  contenido2">
-            <p>2016</p>
-        </section>
-
-        <section class="tabla-calendario  contenido3">
-            <p>2017</p>
-        </section>
     </section>
     <footer class="padding-1 padding-1-0--l borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
