--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </p>
         <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
     </div>
-    <section class="border-t1 padding-1 border-b1 grey borderc-grey padding-5-0--l">
-        <h2 class="margin-b0 maw-60 font-2 margin-b2 font-s">Calendario de plenos</h2>
+    <section class="border-t1 padding-1 border-b1 grey borderc-grey padding-3-0--l mih-100">
+        <h2 class="margin-b0 maw-60 font-2 margin-b2 font-s">CALENDARIO DE PLENOS</h2>
         <article class="maw-60">
             <input class="input-record" id="tab1" type="radio" name="tabs" checked>
             <label class="label-record font-3 font-s" for="tab1">2015</label>
@@ -57,27 +57,25 @@
             <label class="label-record font-3 font-s" for="tab3">2017</label>
             <!-- ENERO -->
             <section class="tabla-calendario contenido1">
-                <p>2015</p>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
             </section>
             <!-- FEBRERO -->
             <section class="tabla-calendario  contenido2">
-                <p>2016</p>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-07-2015.html">28 de enero de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/02-10-2015.html">26 de febrero de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/30-10-2015.html">23 de marzo de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-11-2015.html">29 de abril de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/23-12-2015.html">27 de mayo de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="">1 de julio de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-11-2015.html">22 de julio de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/23-12-2015.html">30 de septiembre de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="">28 de octubre de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/27-11-2015.html">2 de diciembre de 2016</a>
-                <a class="night-rider underline ghost-b textd-n " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-07-2015.html">28 de enero de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/02-10-2015.html">26 de febrero de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/30-10-2015.html">23 de marzo de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">29 de abril de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">27 de mayo de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="">1 de julio de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">22 de julio de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">30 de septiembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="">28 de octubre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">2 de diciembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2016</a>
             </section>
 
             <section class="tabla-calendario  contenido3">
