nuevo diseño para la portada

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="mih-100">
-    <header class="font-0 border-b1 borderc-greyc grey w-100 pos-sy tp-0 zi-10">
+    <header class="font-0 border-b1 borderc-greyc w-100 pos-f tp-0 zi-10 bgc-header-home">
         <nav class="padding-0-1 nav-grid">
             <a href="http://bislai.co" class="textd-n black font-1 font-2--m margin-y0  bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
             BISLAI
@@ -40,11 +40,16 @@
             </div>
         </nav>
     </header>
-    <div class="maw-60 padding-1 padding-1-0--l">
-        <p class="font-1">Bislai es la <strong>respuesta</strong> a lo que encontre en la página de plenos del <strong>Ayuntamiento de Zaragoza</strong>. Allí la <strong>información se presentaba en bruto, sin distinción alguna</strong>. El fin de Bislai es mostrar los plenos de una manera más <strong>accesible y visual</strong>.
-        </p>
-        </p>
-        <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+    <div class="bislai-grid padding-1 padding-1-0--l">
+        <div class="column orange">
+          <img src="img/urnas.jpg" alt="">
+        </div>
+        <div class="bislai-grid-text">
+            <p class="font-1">Bislai es la <strong>respuesta</strong> a lo que encontre en la página de plenos del <strong>Ayuntamiento de Zaragoza</strong>. Allí la <strong>información se presentaba en bruto, sin distinción alguna</strong>. El fin de Bislai es mostrar los plenos de una manera más <strong>accesible y visual</strong>.
+            </p>
+            </p>
+            <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+        </div>
     </div>
     <section class="border-t1 padding-1 border-b1 grey borderc-grey padding-3-0--l mih-100">
         <h2 class="margin-b0 maw-60 font-2 margin-b2 font-s">CALENDARIO DE PLENOS</h2>
