modificando el header y los botones del calendario de plenos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="http://bislai.co" class="textd-n black font-1 font-2--m margin-y0  bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
             BISLAI
             </a>
-            <div class="w-100--m maw-70p--l">
+            <div class="w-100--m maw-70p--l padding-0__5-0">
                 <div class="pos-r">
                     <form action="http://bislai.co/buscador">
                         <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
@@ -62,25 +62,25 @@
             <label class="label-record font-3 font-s" for="tab3">2017</label>
             <!-- ENERO -->
             <section class="tabla-calendario contenido1">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
             </section>
             <!-- FEBRERO -->
             <section class="tabla-calendario  contenido2">
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-07-2015.html">28 de enero de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/02-10-2015.html">26 de febrero de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/30-10-2015.html">23 de marzo de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">29 de abril de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">27 de mayo de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="">1 de julio de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">22 de julio de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">30 de septiembre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="">28 de octubre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">2 de diciembre de 2016</a>
-                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 texta-l font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-07-2015.html">28 de enero de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/02-10-2015.html">26 de febrero de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/30-10-2015.html">23 de marzo de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">29 de abril de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">27 de mayo de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="">1 de julio de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">22 de julio de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">30 de septiembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="">28 de octubre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/27-11-2015.html">2 de diciembre de 2016</a>
+                <a class="bgc-tabs tabs color-tabs font-w6 padding-1 margin-b1 border-radius-5 font-s white textd-n display-b " href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2016</a>
             </section>
 
             <section class="tabla-calendario  contenido3">
