inlcuyendo titulo en la parte superior de la caja

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <img src="img/urnas.jpg" alt="">
         </div>
         <div class="bislai-grid-text">
+            <h2 class="font-s pos-r"> ACCESIBILIDAD POLÍTICA</h2>
             <p class="font-1">Bislai es la <strong>respuesta</strong> a lo que encontre en la página de plenos del <strong>Ayuntamiento de Zaragoza</strong>. Allí la <strong>información se presentaba en bruto, sin distinción alguna</strong>. El fin de Bislai es mostrar los plenos de una manera más <strong>accesible y visual</strong>.
             </p>
             </p>
