--- a/mapbox.html
+++ b/mapbox.html
@@ -2,43 +2,55 @@
 <html lang="es">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Tipue Search Static Mode Demo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/tipuesearch_content.js"></script>
     <script type="text/javascript" src="js/tipuesearch_set.js"></script>
     <script type="text/javascript" src="js/tipuesearch.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body class="mih-100">
-    <header class="font-0 border-b1 borderc-greyc grey w-100 pos-sy tp-0 zi-10">
-    <nav class="padding-0-1 nav-grid">
-        <a href="http://bislai.co" class="textd-n black font-1 font-2--m margin-y0  bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
-        BISLAI
-        </a>
-        <div class="w-100--m maw-70p--l">
-            <div class="pos-r">
-                <form action="http://bislai.co/buscador">
-                    <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                    <button class="btn-search" type="submit">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
-                        </svg>
-                    </button>
-                </form>
+<style>
+    html, body, #wrapper {
+        width: 100%;
+        height: 100%;
+        padding: 0px;
+        margin: 0px;
+    }
+    #map {
+      position:relative;
+      width: 100%;
+      height: 100vh;
+      margin: auto auto;
+    }
+    svg {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      path {
+        stroke: none;
+      }
+    }
+    .hidden {
+        display: none;
+    }
+    </style>
+    <section class="mapa-container">
+        <div id="map-wrap">
+            <div id="map">
             </div>
         </div>
-        <div class="nav-grid-second display-n display-ib--m">
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline black vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-        </div>
-    </nav>
-</header>
-    <div class="mih-custom maw-60 margin-y1">
-        <div id="tipue_search_content">
-        </div>
-    </div>
+    </section>
+
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
+    <script type="text/javascript" src="js/mapbox.js"></script>
     <script>
     $(document).ready(function() {
         $('#tipue_search_input').tipuesearch({
@@ -47,15 +59,6 @@
         });
     });
     </script>
-    <footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
-        <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
-        <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
-        <div class="maw-60">
-            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">CREDITOS</a>
-            <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
-            <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
-        </div>
-    </footer>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -73,5 +76,4 @@
     ga('send', 'pageview');
     </script>
 </body>
-
 </html>
