cambios en los estilos | pasando de mapbox a la home el mapa bueno

--- a/mapbox.html
+++ b/mapbox.html
@@ -27,16 +27,13 @@
     #map {
       position:relative;
       width: 100%;
-      height: 100vh;
+      height: 500px;
       margin: auto auto;
     }
     svg {
       position: absolute;
       width: 100%;
       height: 100%;
-      path {
-        stroke: none;
-      }
     }
     .hidden {
         display: none;
