--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script type="text/javascript" src="js/tipuesearch.min.js"></script>
     <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="https://d3js.org/topojson.v1.min.js"></script>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -104,7 +103,7 @@
             <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
         </div>
     </footer>
-
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
     <script type="text/javascript" src="js/mapa.js"></script>
     <script>
     $(document).ready(function() {
