--- a/mapbox.html
+++ b/mapbox.html
@@ -46,7 +46,8 @@
         </div>
     </section>
 
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.41.0/mapbox-gl.js'></script>
     <script type="text/javascript" src="js/mapbox.js"></script>
     <script>
     $(document).ready(function() {
