cambiando el buscador y la caja prinicpal de la home

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     </header>
     <div class="bislai-grid padding-1 padding-1-0--l">
         <div class="column orange">
-          <img src="img/urnas.jpg" alt="">
+            <img src="img/urnas.jpg" alt="">
         </div>
-        <div class="bislai-grid-text">
-            <h2 class="font-s pos-r"> ACCESIBILIDAD POLÍTICA</h2>
-            <p class="font-1">Bislai es la <strong>respuesta</strong> a lo que encontre en la página de plenos del <strong>Ayuntamiento de Zaragoza</strong>. Allí la <strong>información se presentaba en bruto, sin distinción alguna</strong>. El fin de Bislai es mostrar los plenos de una manera más <strong>accesible y visual</strong>.
-            </p>
+        <div class="bislai-grid-text font-s">
+            <h2 class="pos-r"> ACCESIBILIDAD POLÍTICA</h2>
+            <p class="font-1">El cometido de <strong>Bislai</strong> es mostrar de una manera más <strong>accesible</strong> las propuestas y acuerdos que toman los partidos políticos con representación en el <strong>Ayuntamiento de Zaragoza</strong>.</p>
+            <p class="font-1">Puedes <strong>buscar cualquier término</strong> en todas las mociones que han presentado los distintos partidos en el pleno del Ayuntamiento de Zaragoza.
             </p>
             <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
         </div>
