ajustando los estilos para el nuevo diseño de la home

--- a/creditos.html
+++ b/creditos.html
@@ -64,6 +64,10 @@
 
     <p>El icono que acompaña las gráficas de ¿quién ha ganado más? y ¿quién ha perdido más? ha sido diseñador por <a href="https://thenounproject.com/dergraph/">Thomas Helbig</a> on the @NounProject.</p>
 
+    <p>Podium by Made by Made from the Noun Project</p>
+    <p>president by Made by Made from the Noun Project</p>
+    <p>podium speech by Juan Pablo Bravo from the Noun Project</p>
+
 
 
     </div>
