--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="mih-100">
     <header class="font-0 border-b1 borderc-greyc w-100 zi-10 bgc-header-home">
         <nav class="padding-0__5-1 nav-grid">
-            <a href="http://bislai.co" class="textd-n color-header font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
+            <a href="http://bislai.co" class="textd-n pink font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
             BISLAI
             </a>
             <div class="w-100--m maw-70p--l padding-0__5-0">
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="nav-grid-second display-n display-ib--m">
-                <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline color-header vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
+                <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline pink vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
             </div>
         </nav>
     </header>
