--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
             </div>
         </div>
     </section>
-    <footer class="padding-1 padding-1-0--l borderc-grey border-t1 bgc-white woodsmoke font-w6 font-s">
-        <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
+    <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
         <div class="maw-60">
             <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">CREDITOS</a>
             <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
             <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
         </div>
+        <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
     </footer>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
     <script type="text/javascript" src="js/mapa.js"></script>
