--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="mih-100">
-    <header class="font-0 border-b1 borderc-greyc w-100 zi-10 bgc-header-home">
+    <header class="font-0 w-100 zi-10 bgc-header-home">
         <nav class="padding-0__5-1 nav-grid">
             <a href="http://bislai.co" class="textd-n pink font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
             BISLAI
