--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="bislai-home-body-right">
-                <p class="bislai-home-body-right-text">Bislai muestra de una manera más accesible las propuestas y acuerdos que toman los partidos políticos en el Ayuntamiento de Zaragoza.</p>
+                <p class="bislai-home-body-right-text">Bislai muestra de una manera más <strong>accesible</strong> las <strong>propuestas y acuerdos</strong> que toman los partidos políticos en el Ayuntamiento de Zaragoza.</p>
                 <p class="bislai-home-body-right-text">Todos los datos han sido obtenidos del Ayuntamiento de Zaragoza.</p>
             </div>
         </div>
