titulo del mapa

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <section class="mapa-container">
         <div id="map-wrap">
             <div id="map">
+                <span class="tooltip-title">ELECCIONES MUNICIPALES 2015</span>
             </div>
         </div>
     </section>
