dandole vida al pagina de partidos

--- a/partidos.html
+++ b/partidos.html
@@ -35,24 +35,18 @@
             </div>
         </nav>
     </header>
-    <section class="bgc-pp padding-2">
-        <div class="maw-60">
-            <h3 class="font-s font-3">Partido Popular</h3>
-            <ul>
-                <li class="font-s white">10 concejales</li>
-                <li class="font-s white">45.000 votos</li>
-                <li class="font-s white">60 monciones</li>
-            </ul>
-        </div>
-    </section>
-    <section class="bgc-zec padding-2">
-        <div class="maw-60">
-            <h3 class="font-s font-3">Zaragoza En Común</h3>
-            <ul>
-                <li class="font-s white">9 concejales</li>
-                <li class="font-s white">45.000 votos</li>
-                <li class="font-s white">60 monciones</li>
-            </ul>
+    <section class="partido">
+        <div class="maw-70">
+            <article class="partido-card w-20 display-ib border-radius-10">
+                <div class="partido-card-top">
+                    <h3 class="font-s bgc-pp padding-1 margin-0 border-radius-10 padding-2">Partido Popular</h3>
+                </div>
+                <div class="partido-card-bottom">
+                    <p>80000 votos</p>
+                    <p>45% de votos</p>
+                    <p>10 concejales</p>
+                </div>
+            </article>
         </div>
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
