terminando la primera tarjeta de la pagina de partidos

--- a/partidos.html
+++ b/partidos.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body class="mih-100">
+<body class="partido">
     <header class="font-0 w-100 zi-10">
         <nav class="padding-0__5-1 nav-grid">
             <a href="http://bislai.co" class="textd-n bislai-color font-1 font-2--m margin-y0 bold display-ib vertical-am font-w2 font-bislai nav-grid-first">
@@ -35,19 +35,14 @@
             </div>
         </nav>
     </header>
-    <section class="partido">
-        <div class="maw-70">
-            <article class="partido-card w-20 display-ib border-radius-10">
-                <div class="partido-card-top">
-                    <h3 class="font-s bgc-pp padding-1 margin-0 border-radius-10 padding-2">Partido Popular</h3>
-                </div>
-                <div class="partido-card-bottom">
-                    <p>80000 votos</p>
-                    <p>45% de votos</p>
-                    <p>10 concejales</p>
+    <section class="partido-container">
+            <article class="partido-card display-ib pos-r font-bislai">
+                <div class="partido-card-top pos-a">
+                    <h3 class="partido-card-title">PARTIDO POPULAR</h3>
+                    <p class="partido-card-votos">87554 VOTOS / 26.88%</p>
+                    <p class="partido-card-concejales">10 CONCEJALES</p>
                 </div>
             </article>
-        </div>
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
