incluyendo enlaces en la paginade partidos

--- a/partidos.html
+++ b/partidos.html
@@ -36,41 +36,46 @@
         </nav>
     </header>
     <section class="partido-container">
-            <article class="partido-card display-ib pos-r font-bislai">
+            <a href="#" class="partido-card display-ib pos-r font-bislai">
+                <div class="partido-card-bg"></div>
                 <div class="partido-card-top pos-a">
                     <h3 class="partido-card-title">PARTIDO POPULAR</h3>
                     <p class="partido-card-votos">87554 VOTOS / 26.88%</p>
                     <p class="partido-card-concejales">10 CONCEJALES</p>
                 </div>
-            </article>
-            <article class="partido-card partido-card-right partido-card-zec display-ib pos-r font-bislai">
+            </a href="#">
+            <a href="#" class="partido-card partido-card-right partido-card-zec display-ib pos-r font-bislai">
+                <div class="partido-card-bg partido-card-left"></div>
                 <div class="partido-card-top partido-card-top-right partido-card-top-zec pos-a">
                     <h3 class="partido-card-title">ZARAGOZA EN COMÚN</h3>
                     <p class="partido-card-votos">80040 VOTOS / 24.57%</p>
                     <p class="partido-card-concejales">9 CONCEJALES</p>
                 </div>
-            </article>
-            <article class="partido-card partido-card-psoe display-ib pos-r font-bislai">
+            </a>
+            <a href="#" class="partido-card partido-card-psoe display-ib pos-r font-bislai">
+                <div class="partido-card-bg partido-card-left"></div>
                 <div class="partido-card-top partido-card-top-psoe pos-a">
                     <h3 class="partido-card-title">PARTIDO SOCIALISTA OBRERO ESPAÑOL</h3>
                     <p class="partido-card-votos">60746 VOTOS / 18.65%</p>
                     <p class="partido-card-concejales">6 CONCEJALES</p>
                 </div>
-            </article>
-            <article class="partido-card partido-card-right partido-card-cs display-ib pos-r font-bislai">
+            </a>
+            <a href="#" class="partido-card partido-card-right partido-card-cs display-ib pos-r font-bislai">
+                <div class="partido-card-bg"></div>
                 <div class="partido-card-top partido-card-top-right partido-card-top-cs pos-a">
                     <h3 class="partido-card-title">CIUDADANOS</h3>
                     <p class="partido-card-votos">40046 VOTOS / 12.29%</p>
                     <p class="partido-card-concejales">4 CONCEJALES</p>
                 </div>
-            </article>
-            <article class="partido-card partido-card-cha display-ib pos-r font-bislai">
+            </a>
+            <a href="#" class="partido-card partido-card-cha display-ib pos-r font-bislai">
+                <div class="partido-card-bg partido-card-left"></div>
                 <div class="partido-card-top partido-card-top-cha pos-a">
                     <h3 class="partido-card-title">CHUNTA ARAGONESISTA</h3>
                     <p class="partido-card-votos">22076 VOTOS / 6.78%</p>
                     <p class="partido-card-concejales">2 CONCEJALES</p>
                 </div>
-            </article>
+            </a>
     </section>
     <footer class="padding-1 padding-4-0--l borderc-grey border-t1 woodsmoke font-w6 font-s footer">
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
